Fixed liked amount layout bug

--- a/src/components/spin.css
+++ b/src/components/spin.css
@@ -122,9 +122,8 @@ p.unfollowed-tags {
 }
 
 p.num-likes{
-    /*margin-left: 5px;
-    margin-right: 40px;
-    margin-top: 5px;*/
+    margin-left: 5px;
+    text-align: left;
     flex: 50;
 }
 
